objects/InverterList__c.object
<CustomObject>
    <description>Aurora- This object contains the list of inverters per design. It is possible for an inverter to be associated with multiple roofs. This object will carry this list.</description>
    <fields>
        <fullName>EDDiE_Retrofit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indication that the record was created as part of EDDiE Data Retrofit</description>
        <label>EDDiE Retrofit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <description>To store index value of Inverter to be used by Informatica</description>
        <label>Index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <description>Aurora: This field will capture messages from Aurora Integration. For example, if a configuration is not found, this field will capture the item information for which configuration is missing.</description>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InverterConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Aurora: lookup to the inverter record</description>
        <label>Inverter Configuration</label>
        <referenceTo>Inverter_Configuration__c</referenceTo>
        <relationshipLabel>Inverter List</relationshipLabel>
        <relationshipName>Inverter_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RoofDesign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inverter list record will be associated with this roof design</description>
        <label>Roof Design</label>
        <referenceTo>Roof_Design__c</referenceTo>
        <relationshipName>Design_Inverter_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inverter List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inverter List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inverter List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>